# tta-aiqa

./: .dockerignore  .dvcignore  .env.example  .env.grafanacloud.example  .gitignore  AGENTS.md  Makefile  README.md  domains.csv  dvc.yaml  params.yaml  pyproject.toml
apps/data-quality-pipeline/: README.md  pyproject.toml
apps/data-quality-pipeline/src/data_quality_pipeline/: __init__.py  bootstrap.py  dvc_stage.py  main.py  prepare_main.py  settings.py  validation.py  workflow.py
apps/data-quality-pipeline/src/data_quality_pipeline/adapters/: __init__.py  artifacts.py  evidence.py  expectations.py  great_expectations.py  quality.py  quality_validator.py  source.py
apps/data-quality-pipeline/src/data_quality_pipeline/application/: __init__.py  commands.py  preparation.py  validation.py
apps/data-quality-pipeline/src/data_quality_pipeline/domain/: __init__.py  workflow.py
apps/data-quality-pipeline/src/data_quality_pipeline/ports/: __init__.py  runtime.py
apps/grafana-dashboard-importer/: README.md  pyproject.toml
apps/grafana-dashboard-importer/src/grafana_dashboard_importer/: __init__.py  bootstrap.py  main.py  settings.py
apps/grafana-dashboard-importer/src/grafana_dashboard_importer/adapters/: __init__.py  grafana_http.py  template.py
apps/grafana-dashboard-importer/src/grafana_dashboard_importer/application/: __init__.py  import_dashboard.py
apps/grafana-dashboard-importer/src/grafana_dashboard_importer/domain/: __init__.py  bindings.py  dashboard.py
apps/grafana-dashboard-importer/src/grafana_dashboard_importer/ports/: __init__.py  dashboard_gateway.py
apps/kserve-predictor/: Dockerfile  README.md  pyproject.toml
apps/kserve-predictor/src/kserve_predictor/: __init__.py  bootstrap.py  http.py  main.py  settings.py
apps/kserve-predictor/src/kserve_predictor/adapters/: __init__.py  http.py  kserve_v2.py
apps/model-trainer/: Dockerfile  README.md  pyproject.toml
apps/model-trainer/src/model_trainer/: __init__.py  bootstrap.py  bundles.py  development.py  finalization.py  main.py  provenance.py  release.py  settings.py  workflow.py
apps/model-trainer/src/model_trainer/adapters/: __init__.py  bootstrap_evidence.py  canonical.py  deployment.py  documents.py  json_files.py  model_bundles.py  model_evidence.py  release_provenance.py  source_control.py
apps/model-trainer/src/model_trainer/application/: __init__.py  bundles.py  commands.py  development.py  finalization.py  release.py  release_evidence.py
apps/model-trainer/src/model_trainer/domain/: __init__.py  release.py  workflow.py
apps/model-trainer/src/model_trainer/ports/: __init__.py  runtime.py
apps/risk-api/: Dockerfile  README.md  pyproject.toml
apps/simple_mlops/: .gitignore  Dockerfile  results.ipynb
apps/traffic-generator/: Dockerfile  README.md  pyproject.toml
apps/traffic-generator/src/traffic_generator/: __init__.py  bootstrap.py  main.py  settings.py
apps/traffic-generator/src/traffic_generator/adapters/: __init__.py  config.py  csv_pool.py  http_client.py  jsonl.py  wire_values.py
apps/traffic-generator/src/traffic_generator/application/: __init__.py  generate.py
apps/traffic-generator/src/traffic_generator/domain/: __init__.py  payloads.py  scenarios.py
apps/traffic-generator/src/traffic_generator/ports/: __init__.py  traffic.py
artifacts/data-quality/: .gitignore
artifacts/deployment/: chapter_03_container_status_sample.json
artifacts/grafana/: README.md  ai_quality_dashboard.json  ai_quality_details_dashboard.json  grafana_cloud_payload_preview.json
artifacts/great_expectations/: README.md  chapter_02_expectations.json  chapter_02_validation_result.json
artifacts/logs/: chapter_04_anomaly_events.jsonl  chapter_04_normal_events.jsonl  prediction_events.jsonl
artifacts/metrics/: README.md  chapter_04_anomaly.prom
artifacts/models/: README.md  chapter_02_baseline.pkl
artifacts/reports/: README.md  ai_qa_checklist.md  ai_qa_checklist_template.md  chapter_01_quality_report.md  chapter_02_model_quality_comparison.md  chapter_03_serving_inspection.md  drift_report.md  label_basis_check.md  release_approval.md
artifacts/traces/: README.md
configs/: README.md
configs/contracts/: model-input.yaml  physionet-record.yaml
configs/data/: aggregation.yaml  quality-rules.yaml
configs/model/: evaluation.yaml  feature-sets.yaml  profiles.yaml
configs/operations/: docker.yaml  grafana_cloud.yaml  observability.yaml  serving.yaml
configs/phase0/: physionet-2012.yaml
configs/qa/: release-policy.yaml
configs/qa_strategy/: approval_rules.yaml  drift_scenarios.yaml
configs/serving/: api.yaml
configs/traffic/: scenarios.yaml
configs/validation/: README.md  great_expectations_rules.yaml  model_metadata.yaml
data/: README.md  drift_requests.csv  operational_current_stream_events.jsonl  serving_requests.csv  serving_requests_current_stream.csv  serving_requests_invalid.csv  vital_signs_evaluation_baseline.csv  vital_signs_operational_holdout.csv  vital_signs_test.csv
demos/ch02_great_expectations/: 01_run_great_expectations_demo.py  README.md
demos/ch02_mlflow/: 01_run_with_docker_mlflow.sh  README.md  run_demo.py  run_with_docker_mlflow.sh
demos/ch03_docker_kubernetes/: Dockerfile  README.md
demos/ch04_grafana_cloud/: docker-compose.alloy.yml  prometheus.remote_write.example.yml  run_demo.py  (+4 more)
demos/simple_mlops/: .dockerignore  Dockerfile  README.md  app.py  compose.yaml  config.py  pyproject.toml  results.ipynb  send_fake_traffic.py  train.py
demos/simple_mlops/config/: app.local.json
docs/: feature-contract-working-note.md  materials-manifest.md  v2-implementation-verification.md  v2-to-be-plan.md
gitops/: README.md
labs/: NOTEBOOK_STRUCTURE.md  README.md  prepare_data.py
legacy/: README.md  compose.yaml  course.py
scripts/: __init__.py  build_data_evidence.py  build_model_evidence.py  build_quality_evidence.py  build_split_revision_evidence.py  course.py  freeze_model_input.py  historical_evidence.py  prepare_data.py  publish_model.py  run_data_stage.py  run_model.py  setup_course.py  validate_data.py
tests/: conftest.py
(+431 files in other folders)
