[project]
name = "tta-aiqa-monorepo"
version = "0.1.0"
description = "Simple MLOps-centered AI QA monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiqa-data",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.uv]
package = false
environments = [
  "python_version == '3.11'",
]

[tool.uv.sources]
aiqa-core = { workspace = true }
aiqa-data = { workspace = true }
aiqa-model = { workspace = true }
aiqa-observability = { workspace = true }

[tool.uv.workspace]
members = [
  "apps/simple_mlops",
  "packages/aiqa-core",
  "packages/aiqa-data",
  "packages/aiqa-model",
  "packages/aiqa-observability",
]

[tool.ruff]
exclude = ["legacy"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
