[project]
name = "tta-aiqa-monorepo"
version = "0.1.0"
description = "Simple MLOps-centered AI QA monorepo"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiqa-core",
  "aiqa-data",
  "aiqa-model",
  "aiqa-observability",
  "aiqa-qa",
  "aiqa-serving",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "dvc>=3.60",
  "pytest>=8.3",
  "ruff>=0.6",
]
notebook = [
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "matplotlib>=3.9",
  "nbclient>=0.10",
  "nbformat>=5.10",
]

[tool.uv]
package = false

[tool.uv.sources]
aiqa-core = { workspace = true }
aiqa-data = { workspace = true }
aiqa-model = { workspace = true }
aiqa-observability = { workspace = true }
aiqa-qa = { workspace = true }
aiqa-serving = { workspace = true }

[tool.uv.workspace]
members = [
  "apps/data-quality-pipeline",
  "apps/grafana-dashboard-importer",
  "apps/model-trainer",
  "apps/risk-api",
  "apps/traffic-generator",
  "packages/aiqa-core",
  "packages/aiqa-data",
  "packages/aiqa-model",
  "packages/aiqa-observability",
  "packages/aiqa-qa",
  "packages/aiqa-serving",
]

[tool.ruff]
exclude = ["legacy"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["legacy"]
markers = [
  "unit: tests for domain and application behavior without technical boundaries",
  "architecture: static dependency and repository structure checks",
  "integration: tests that cross a technical adapter boundary",
  "scenario: end-user quality decision scenarios",
  "e2e: full workflow tests requiring external runtimes",
]
