[project]
name = "aiqa-data-quality-pipeline"
version = "0.2.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiqa-core",
  "aiqa-data",
  "aiqa-observability",
  "great-expectations>=1.5,<2",
  "pandas>=2.2",
  "pydantic-settings>=2.4",
]

[project.scripts]
aiqa-data-quality = "data_quality_pipeline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_quality_pipeline"]
