[project]
name = "aiqa-grafana-dashboard-importer"
version = "0.2.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic-settings>=2.4",
  "requests>=2.32",
]

[project.scripts]
aiqa-grafana-dashboard = "grafana_dashboard_importer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grafana_dashboard_importer"]
