[project]
name = "aiqa-model-trainer"
version = "0.2.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiqa-core",
  "aiqa-data",
  "aiqa-model",
  "aiqa-observability",
  "aiqa-qa",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
]

[project.scripts]
aiqa-model-trainer = "model_trainer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_trainer"]
