[project]
name = "aiqa-traffic-generator"
version = "0.2.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiqa-core",
  "aiqa-observability",
  "pandas>=2.2",
  "pydantic-settings>=2.4",
  "requests>=2.32",
]

[project.scripts]
aiqa-traffic = "traffic_generator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traffic_generator"]
