[project]
name = "simple-aiqa-mlops"
version = "0.1.0"
description = "Small MLflow, FastAPI, Docker Compose demo for AIQA classes."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110",
    "joblib>=1.4",
    "mlflow>=2.12",
    "numpy>=1.26,<2.3",
    "pandas>=2.2",
    "pydantic>=2.7",
    "requests>=2.32",
    "scikit-learn>=1.4",
    "setuptools>=69,<81",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
notebook = [
    "ipykernel>=7.3",
    "jupyter>=1.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
